Add Header to Contact and Team pages

--- a/.github/contact.html
+++ b/.github/contact.html
@@ -17,9 +17,34 @@
     />
   </head>
   <body>
-  
-
     
+   <!--Header-->
+   <header>
+    <img src="images/nicole-logo.png" alt="Logo" />
+    <a href="#" class="login-button">Log in</a>
+
+    <nav>
+      <a class="toggle" onclick="showNav()"
+        ><i class="fa fa-bars" aria-hidden="true"></i
+      ></a>
+      <ul id="nav-items">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="team.html">Our Team</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <li class="login-button-mobile">
+          <a href="#">Log in</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+
   <!--Footer-->
   <footer>
     <ul class="footer-list">
