Add CSS and Call-to-action for Our Team page

--- a/.github/team.html
+++ b/.github/team.html
@@ -113,6 +113,16 @@
       </div>
     </section>
 
+    <!--Call-to-action-->
+    <section class="call-to-action">
+      <h2>Let's Make Your Numbers Work for You</h2> <!-- Text from ChatGPT-->
+
+      <p>
+        For more information, or to book an appointment contact us today!
+      </p>
+      <a class="cta-button" href="#">Contact Us</a>
+    </section>
+
     <!--Footer-->
     <footer>
       <ul class="footer-list">
