--- a/contact.html
+++ b/contact.html
@@ -61,11 +61,7 @@
           class="contact-photo"
         />
 
-        <video width="320" height="240" autoplay loop muted>
-          <source src="images/video.mp4" type="video/mp4" />
-          <source src="movie.ogg" type="video/ogg" />
-          Your browser does not support the video tag.
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tEJcna0bU1Q?si=je2pHhvlGXOVg44L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
 
       <div class="contact-map">
