--- a/contact.html
+++ b/contact.html
@@ -15,53 +15,93 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!--Header-->
     <header>
-      <img src="images/nicole-logo.png" alt="Logo" />
-      <a href="#" class="login-button">Log in</a>
-
+      <a href="./index.html" class="img-logo"> <img src="images/nicole-logo.png" alt="Logo" /></a>
       <nav>
         <a class="toggle" onclick="showNav()"
           ><i class="fa fa-bars" aria-hidden="true"></i
         ></a>
         <ul id="nav-items">
-          <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="team.html">Our Team</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-          <li class="login-button-mobile">
-            <a href="#">Log in</a>
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <!--Contact-->
     <section id="contact-page">
-      <div class="contact-info">
-        <h2>Contact Us</h2>
-        <p>
-          <strong>Phone:</strong> <a href="tel:12508711121">125-087-11121</a>
-        </p>
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:Nicole@nicolecahoon.com">Nicole@nicolecahoon.com</a>
-        </p>
-      </div>
-
-      <div class="contact-media">
-        <img
-          src="images/nicole-contact.png"
-          alt="Nicole Contact"
-          class="contact-photo"
-        />
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tEJcna0bU1Q?si=je2pHhvlGXOVg44L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <h1>Contact Us</h1>
+      <div class="contact-container">
+        <div class="contact-info">
+          <p>
+            <strong>Phone:</strong> <a href="tel:12508711121">+ 1 (250)871-1121</a>
+          </p>
+          <p>
+            <strong>Email:</strong>
+            <a href="mailto:Nicole@nicolecahoon.com">Nicole@nicolecahoon.com</a>
+          </p>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/tEJcna0bU1Q?si=je2pHhvlGXOVg44L"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="contact-form">
+          <form>
+            <fieldset>
+              <label for="name">Name</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Enter your name"
+              />
+            </fieldset>
+            <fieldset>
+              <label for="phone">Phone Number</label>
+              <input
+                type="tel"
+                name="phone"
+                id="phone"
+                placeholder="Enter your phone number"
+              />
+            </fieldset>
+            <fieldset>
+              <label for="email">Email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter your email"
+              />
+            </fieldset>
+            <fieldset>
+              <label for="message">Message</label>
+              <textarea
+                name="message"
+                id="message"
+                placeholder="Write your message"
+              ></textarea>
+            </fieldset>
+            <button>Send</button>
+          </form>
+        </div>
       </div>
 
       <div class="contact-map">
