--- a/index.html
+++ b/index.html
@@ -15,28 +15,26 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!--Header-->
     <header>
-      <img src="images/nicole-logo.png" alt="Logo" />
-      <a href="#" class="login-button">Log in</a>
-
+      <a href="./index.html" class="img-logo"> <img src="images/nicole-logo.png" alt="Logo" /></a>
       <nav>
         <a class="toggle" onclick="showNav()"
           ><i class="fa fa-bars" aria-hidden="true"></i
         ></a>
         <ul id="nav-items">
-          <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="team.html">Our Team</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-          <li class="login-button-mobile">
-            <a href="#">Log in</a>
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -142,7 +140,8 @@
               “Nicole and her team have been so helpful with mine and my
               husband's taxes. Between a business, a rental property, and any
               other questions we've had, she's made our paperwork confusion
-              clearer and smoother.  We will certainly be using her services for years to come!”
+              clearer and smoother. We will certainly be using her services for
+              years to come!”
             </p>
             <h3>Heather Green</h3>
             <span>RMT</span>
@@ -152,11 +151,10 @@
 
       <!--Call-to-action-->
       <section class="call-to-action">
-        <h2>Let's Make Your Numbers Work for You</h2> <!-- Text from ChatGPT-->
+        <h2>Let's Make Your Numbers Work for You</h2>
+        <!-- Text from ChatGPT-->
 
-        <p>
-          For more information, or to book an appointment contact us today!
-        </p>
+        <p>For more information, or to book an appointment contact us today!</p>
         <a class="cta-button" href="#">Contact Us</a>
       </section>
     </main>
