--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
   <body>
     <!--Header-->
     <header>
-      <a href="./index.html" class="img-logo"> <img src="images/nicole-logo.png" alt="Logo" /></a>
+      <a href="./index.html" class="img-logo">
+        <img src="images/nicole-logo.png" alt="Logo"
+      /></a>
       <nav>
         <a class="toggle" onclick="showNav()"
           ><i class="fa fa-bars" aria-hidden="true"></i
@@ -45,9 +47,14 @@
       <div class="contact-container">
         <div class="contact-info">
           <p>
-            <strong>Phone:</strong> <a href="tel:12508711121">+ 1 (250)871-1121</a>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+
+            <strong>Phone:</strong>
+            <a href="tel:12508711121">+ 1 (250)871-1121</a>
           </p>
           <p>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+
             <strong>Email:</strong>
             <a href="mailto:Nicole@nicolecahoon.com">Nicole@nicolecahoon.com</a>
           </p>
@@ -74,7 +81,7 @@
               />
             </fieldset>
             <fieldset>
-              <label for="phone">Phone Number</label>
+              <label for="phone"> Phone Number</label>
               <input
                 type="tel"
                 name="phone"
