--- a/contact.html
+++ b/contact.html
@@ -48,26 +48,26 @@
         <div class="contact-info">
           <p>
             <i class="fa fa-phone" aria-hidden="true"></i>
-
             <strong>Phone:</strong>
             <a href="tel:12508711121">+ 1 (250)871-1121</a>
           </p>
           <p>
             <i class="fa fa-envelope" aria-hidden="true"></i>
-
             <strong>Email:</strong>
             <a href="mailto:Nicole@nicolecahoon.com">Nicole@nicolecahoon.com</a>
           </p>
           <iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/tEJcna0bU1Q?si=je2pHhvlGXOVg44L"
-  title="YouTube video player"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerpolicy="strict-origin-when-cross-origin"
-  allowfullscreen
-></iframe>
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/tEJcna0bU1Q?si=je2pHhvlGXOVg44L"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
+
+        <!--Forms-->
         <div class="contact-form">
           <form>
             <fieldset>
@@ -110,6 +110,33 @@
         </div>
       </div>
 
+      <!--Hours-->
+      <div class="business-hours-container">
+        <table class="business-hours">
+          <thead>
+            <tr>
+              <th>Day</th>
+              <th>Hours</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Monday - Friday</td>
+              <td>8:00 AM - 8:00 PM</td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>Closed</td>
+            </tr>
+            <tr>
+              <td>Sunday</td>
+              <td>Closed</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!--Map-->
       <div class="contact-map">
         <iframe
           class="store-map"
